@@ -252,13 +252,14 @@ static const KSI_Rule documentHashRule[] = {
 };
 
 static const KSI_Rule internalRules[] = {
+	{KSI_RULE_TYPE_COMPOSITE_AND, documentHashRule},
+	{KSI_RULE_TYPE_BASIC, KSI_VerificationRule_AggregationChainInputLevelVerification},
 	{KSI_RULE_TYPE_BASIC, KSI_VerificationRule_AggregationChainInputHashVerification},
 	{KSI_RULE_TYPE_BASIC, KSI_VerificationRule_AggregationChainMetaDataVerification},
 	{KSI_RULE_TYPE_BASIC, KSI_VerificationRule_AggregationHashChainConsistency},
 	{KSI_RULE_TYPE_BASIC, KSI_VerificationRule_AggregationHashChainTimeConsistency},
 	{KSI_RULE_TYPE_BASIC, KSI_VerificationRule_AggregationHashChainIndexConsistency},
 	{KSI_RULE_TYPE_COMPOSITE_AND, calendarHashChainRule_int},
-	{KSI_RULE_TYPE_COMPOSITE_AND, documentHashRule},
 	{KSI_RULE_TYPE_BASIC, NULL}
 };
 
