@@ -970,7 +970,7 @@ static void testLocalAggregationSigning(CuTest* tc) {
 	verifier.docAggrLevel = TEST_AGGR_LEVEL + 1;
 	res = KSI_SignatureVerifier_verify(KSI_VERIFICATION_POLICY_GENERAL, &verifier, &result);
 	CuAssert(tc, "Locally aggregated signature was not verifiable due to an error.", res == KSI_OK);
-	CuAssert(tc, "The signature can not be verified.", result->resultCode == KSI_VER_RES_FAIL && result->finalResult.errorCode == KSI_VER_ERR_INT_13);
+	CuAssert(tc, "The signature can not be verified.", result->resultCode == KSI_VER_RES_FAIL && result->finalResult.errorCode == KSI_VER_ERR_GEN_3);
 
 	verifier.docAggrLevel = TEST_AGGR_LEVEL - 1;
 	res = KSI_SignatureVerifier_verify(KSI_VERIFICATION_POLICY_GENERAL, &verifier, &result);
